[package]
name = "mipidsi-async"
description = "MIPI Display Command Set compatible generic driver async version"
version = "0.1.0"
authors = ["Ales Katona <almindor@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/almindor/mipidsi"
keywords = ["embedded-hal-driver", "mipi", "dcs", "display"]
readme = "README.md"
documentation = "https://docs.rs/mipidsi"
rust-version = "1.75"

[dependencies]
display-interface = "0.5.0"
embassy-futures = "0.1.1"
embedded-graphics-core = "0.4.0"
embedded-hal = "1.0"
embedded-hal-async = "1.0"

nb = "1.0.0"

[dependencies.heapless]
optional = true
version = "0.8.0"

[features]
default = ["batch", "test"]
batch = ["heapless"]
test = [
    "dep:tokio",
    "dep:tokio-test",
]

[dev-dependencies]
embedded-graphics = "0.8.0"

[target.x86_64-unknown-linux-gnu.dependencies]
tokio = { version = "1.0", features = ["macros", "rt"], optional = true }
tokio-test = { version = "0.4.4", optional = true }
